src/test/deca/syntax/invalid/custom/println_without_par.deca
// Description:
//    println instruction without parents
//
// Resultats:
//    ligne 11 : Error, missing '(' at '"a string"'
//
// Historique:
//    cree le 11/01/2022

{
println"a string";
}